# naguib-vibe

./: .gitignore  CLAUDE.md  implementation_prompt.md
.claude/commands/: implement.md  init-arch.md  prime.md  update-arch.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  deps.py  rate_limit.py  security.py
backend/app/models/: project.py  user.py
backend/app/routers/: agent.py  auth.py  billing.py  projects.py  uploads.py
backend/app/schemas/: auth.py  operations.py  page_config.py  project.py
backend/app/services/: catalog.py  prompt.py
backend/app/services/llm/: claude_service.py  gemini_service.py
backend/migrations/: env.py
backend/migrations/versions/: 326a1718bece_initial_schema_users_projects_project_.py
building/: master_plan.md
building/01-foundation/: implementation.md  plan.md
building/02-component-library/: implementation.md  plan.md
building/03-ai-configurator/: implementation.md  plan.md
building/04-console/: implementation.md  plan.md
building/05-export-pipeline/: implementation.md  plan.md
building/06-auth-persistence/: implementation.md  plan.md
building/07-polish-launch/: implementation.md  plan.md
frontend/: COMPONENT_GUIDE.md  package-lock.json  package.json
research/: architecture_research.md  deep_dive_reference_projects.md
specs/01-generation-enhancement/: implementation.md  plan.md  requirements.md
system_docs/: ARCHITECTURE.md  ag-ui.md  apis.md  manifesto.md  requirements.md  user_stories.md  user_stories_to_apis_map.md
(+104 files in other folders)
